# Rivmux

./: .gitignore  .prettierignore  .versionrc.cjs  CHANGELOG.md  Cargo.toml  PreliminaryDesignVerify.md  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml  test.yml
crates/transmux-core/: Cargo.toml  README.md  package.json  tsconfig.json
crates/transmux-core/benches/: README.md
crates/transmux-core/src/: core.rs  error.rs  event.rs  lib.rs  probe.rs  sample.rs  timeline.rs  track.rs  transmuxer.rs
crates/transmux-core/src/codec/: aac.rs  av1.rs  avc.rs  hevc.rs  mod.rs  normalizer.rs  opus.rs
crates/transmux-core/src/codec/aac/: mod.rs
crates/transmux-core/src/codec/avc/: mod.rs
crates/transmux-core/src/demuxer/: mod.rs
crates/transmux-core/src/demuxer/flv/: mod.rs
crates/transmux-core/src/metadata/: mod.rs
crates/transmux-core/src/mux/fmp4/: init_segment.rs  media_segment.rs  mod.rs  writer.rs
crates/transmux-core/src/muxer/: mod.rs
crates/transmux-core/src/muxer/fmp4/: boxes.rs  init_segment.rs  media_segment.rs  mod.rs  muxer.rs
crates/transmux-core/src/sample/: mod.rs
crates/transmux-core/src/wasm/: mod.rs
crates/transmux-core/tests/: flv_parser.rs  fmp4_audio.rs  fmp4_video.rs  smoke.rs  timeline.rs
crates/transmux-core/tests/support/: mod.rs
crates/transmux-core/types/: rivmux_transmux_core.ts
crates/transmux-fixtures/: Cargo.toml  README.md
crates/transmux-fixtures/fixtures/: README.md
crates/transmux-fixtures/src/: lib.rs
crates/transmux-fixtures/tests/: smoke.rs
examples/basic/: README.md
examples/grid/: README.md
playground/: README.md  index.html  package.json  tsconfig.json
playground/src/: App.vue  main.ts
scripts/: build-player-wasm-assets.mjs  crates-version-updater.cjs
tests/browser/: smoke.test.ts
tests/browser/support/: test-server.ts
tests/fixtures/: smoke.test.ts
tests/integration/: player-package-assets.test.ts  smoke.test.ts
