[workspace]
members = ["crates/transmux-core", "crates/transmux-fixtures"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
authors = ["yangxu52"]

[profile.release]
opt-level = "z"         # 最高优化级别 (0-3, s, z)
debug = false           # 禁用调试信息
overflow-checks = false # 禁用整数溢出检查
lto = true              # 启用链接时优化 (Link Time Optimization)
codegen-units = 1       # 减少代码生成单元，提高优化效果
panic = "abort"         # 使用 abort 而不是 unwind，减小文件大小
