[package]
name = "rivmux_transmux_core"
description = "Rivmux transmux WASM core"
repository = "git+https://github.com/yangxu52/rivmux.git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["wasm"]
serde = ["dep:serde"]
wasm = ["serde", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  '-O4',
  '--strip-debug',
  '--enable-simd',
  '--enable-bulk-memory',
  '--enable-multivalue',
]
